Kgateway/eycartdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eycart-deployment
  namespace: akash-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eycart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: eycart
    spec:
      containers:
      - name: eycart-container
        image: muralisocial123/ey-cart:v1.1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: eycart-svc
  namespace: akash-ns
spec:
  selector:
    app: eycart
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
