Kgateway/flipkartdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-deployment
  namespace: akash-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flipkart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
      - name: flipkart-cont
        image: muralisocial123/flipkart-clone-kuberox:v1.1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-svc
  namespace: akash-ns
spec:
  selector:
    app: flipkart
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
