Kgateway/flowerdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
  namespace: akash-ns
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: flower
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower-container
        image: muralisocial123/kyndrl-flower-app:v1.1.0
        ports:
        - containerPort: 3015
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: flower-svc
  namespace: akash-ns
spec:
  selector:
    app: flower
  ports:
  - port: 80
    targetPort: 3015
    protocol: TCP
  type: ClusterIP
