Kgateway/Route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: akash-ns
spec:
  parentRefs:
  - name: kgateway   # make sure this EXACTLY matches your Gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /flipkart
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: flipkart-svc
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /trans
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: trans-svc
      port: 3000

  - matches:
    - path:
        type: PathPrefix
        value: /flower
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: flower-svc
      port: 3015

  - matches:
    - path:
        type: PathPrefix
        value: /fit
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: fit-service
      port: 5000

  - matches:
    - path:
        type: PathPrefix
        value: /ey-cart
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: eycart-service
      port: 3000
